2017-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sqrtm.R (sqrtm): simple modification so it works for 1x1 matrix
	* R/logm.Higham08.R (rootS): (ditto)
	* src/init.c: "finish" registration

2016-12-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999-1
	* src/matpow.c (matpow): use size_t etc, trying to prevent integer
	overflow when  n^2 > .Machine$integer.max, i.e., n >= 46341

2015-10-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999-0
	* R/balance.R (balance): also add 'job = "N"' (i.e., 'none') option.

	* src/R_dgebal.c (R_dgebal): catch +/-Inf in matrix avoiding
	infinite loop in Lapack's DGEBAL(); thanks to Terry Thernau.

2014-09-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: no longer export logm.Higham08
	* R/expm2.R (expm.AlMoHi09): new  expm(x, method = "AlMohy-Hi09")
	* src/matexp_MH09.c: thanks to Drew Schmidt.

2014-09-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/matpow.c: need to carefully REPROTECT x_

2011-11-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/balance.Rd: use new name balance() instead of dgebal()
	* R/balance.R:

2011-10-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/matexp.f (matexpRBS): do not call STOP ..
	* NAMESPACE: import rowSums from Matrix (because of its
	sparseMatrix method).
	* R/expm.R (expm): auto-coerce sparse matrices to dense, when
	"needed".

2011-10-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm_vec.R (expAtv): finally add the functionality for
	'exp(A*t) %*% v' Ravi had translated from EXPOKIT in August.

2011-08-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm.R (expm): add new method "PadeRBS" (Roger B. Sidje),
	interfacing to the corresponding Fortran code.
	* src/init.c, src/expm.h: also namespace-ify the Fortran symbols.

2011-08-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: also import solve() from Matrix, for sparse expm()
